fix alignment

--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -92,6 +92,7 @@ h1 {
   transform: translateY(2px);
 }
 #contact-move {
+  margin-left: 2em;
   transition: transform 0.01s ease-out;
 }
 #contact-move:hover {
@@ -99,8 +100,8 @@ h1 {
 }
 #navbar ul li:hover ul {
   display: block;
-  font-size:40rem;
-  padding-top:30px;
+  font-size: 40rem;
+  padding-top: 30px;
   color: var(--text-color);
 }
 #welcome-section {
@@ -109,7 +110,8 @@ h1 {
   width: 100%;
   height: 100vh;
   background-color: #000;
-  background-image: linear-gradient(90deg, rgba(255, 0, 0, 0), black 60%), url("img/director.jpeg");
+  background-image: linear-gradient(90deg, rgba(255, 0, 0, 0), black 60%),
+    url("img/director.jpeg");
   background-size: cover;
   background-position: left bottom;
 }
@@ -199,7 +201,7 @@ h1 {
   }
   .stage-section {
     flex-direction: column;
-    align-items:flex-end;
+    align-items: flex-end;
     justify-content: flex-start;
   }
   #non-visible {
@@ -223,7 +225,10 @@ h1 {
     margin-top: 120rem;
   }
   #mover {
-    padding-left:10rem;
+    padding-left: 10rem;
+  }
+  #contact-move {
+    margin-left: 0px;
   }
   #navbar {
     z-index: 5;
